[package]
name = "flappybird"
version = "0.1.0"
authors = ["radina <radina.avramova@gmail.com>"]
edition = "2023"

[dependencies]
ggez = "0.5.0-rc.2"
cgmath = { version = "0.17", features = ["mint"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
noise = "0.5.1"
rand = "0.6.5"
